[package]
name = "trumpet"
version = "0.1.0"
authors = ["BrainBlasted <brainblastedmods@gmail.com>"]
license = "GPL3"

[dependencies]
xdg = "2.0.1"
mammut = "0.9.0"
webbrowser = "0.2.2"
toml = "0.4"

[patch.crates-io]
# Mammut needs a patch until a few PRs are merged in.
mammut = { git = "https://github.com/klausi/Mammut", branch = "klausi" }
